--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -11,7 +11,7 @@
         background-color: black;
         background-image: url('imagens/wallpaper002.jpg');
         background-position: center top;
-        background-repeat: no-repeat;
+        background-repeat: repeat-y;
         background-size: cover;
       }
       main {
@@ -39,6 +39,9 @@
         esse doloremque possimus? Tempore, vel provident? Dicta libero
         laudantium inventore doloremque quasi?
       </p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam vel commodi, odio molestias nihil consequatur id sed cupiditate? Est laboriosam odit similique praesentium sapiente iusto veniam voluptas porro vitae iure. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde dolore eos numquam illo autem! Voluptas numquam officiis consectetur at, molestias ipsam voluptatum quo in harum neque! Eos laborum ut expedita? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi nihil a maxime, temporibus consequatur iste commodi quam ipsum cumque nulla rem modi doloribus? Molestiae ullam ipsam nihil reprehenderit quo asperiores.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam vel commodi, odio molestias nihil consequatur id sed cupiditate? Est laboriosam odit similique praesentium sapiente iusto veniam voluptas porro vitae iure. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde dolore eos numquam illo autem! Voluptas numquam officiis consectetur at, molestias ipsam voluptatum quo in harum neque! Eos laborum ut expedita? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi nihil a maxime, temporibus consequatur iste commodi quam ipsum cumque nulla rem modi doloribus? Molestiae ullam ipsam nihil reprehenderit quo asperiores.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam vel commodi, odio molestias nihil consequatur id sed cupiditate? Est laboriosam odit similique praesentium sapiente iusto veniam voluptas porro vitae iure. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde dolore eos numquam illo autem! Voluptas numquam officiis consectetur at, molestias ipsam voluptatum quo in harum neque! Eos laborum ut expedita? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi nihil a maxime, temporibus consequatur iste commodi quam ipsum cumque nulla rem modi doloribus? Molestiae ullam ipsam nihil reprehenderit quo asperiores.</p>
     </main>
   </body>
 </html>
