--- a/exercicios/desafios/desafiocordel/cordel.html
+++ b/exercicios/desafios/desafiocordel/cordel.html
@@ -10,11 +10,11 @@
 <body>
   <header>
     <h1>Cordel Moderno</h1>
-    <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743"><strong>Milton Duarte</strong></a></p>
+    <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank"><strong>Milton Duarte</strong></a></p>
   </header>
   <main>
     <article>
-      <div>
+      <div class="1">
         <p> Estou ficando cansado</p>
           <p>Da tal tecnologia</p>
         
@@ -31,7 +31,7 @@
 
  
 
- <div>
+ <div class="img">
    <p>Não é mais como era antes</p>
    
    <p>É tudo abreviado</p>
@@ -49,7 +49,7 @@
 
  
 
- <div>
+ <div class="2">
    <p>Arroba agora não pesa</p>
    
    <p>É parte de um endereço</p>
@@ -79,7 +79,7 @@
    <p>Decifre esse rabisco.</p>
  </div>
 
- <div>
+ <div class="img2">
    <p>Tenho saudade das cartas</p>
    
    <p>Escritas com a própria mão</p>
@@ -95,7 +95,7 @@
    <p>Nas linhas do coração.</p>
  </div>
 
- <div>
+ <div class="3">
    <p>Agora, escrevo e envio</p>
    
    <p>Chegando na mesma hora</p>
