--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -15,6 +15,12 @@
         border-collapse: collapse;
       }
 
+      caption {
+        font-size: 1.5em;
+        font-weight: bold;
+        padding: 10px;
+        background-color: darkgray;
+      }
       td,
       th {
         border: 1px solid black;
@@ -38,6 +44,7 @@
     <!--
     ANATOMIA PARA TABELAS GRANDES
     TABLE
+        CAPTION
         THEAD
             TR, TD, TH
         TBODY
@@ -46,12 +53,19 @@
             TR, TD, TH
   -->
     <table>
+      <CAption>População das Unidades Federativas</CAption>
       <thead>
         <tr>
-          <th>Estado</th>
-          <th>População</th>
+          <th scope="col">Estado</th>
+          <th scope="col" style="width: 50px;">População</th>
         </tr>
       </thead>
+      <tfoot>
+        <tr>
+          <th scope="row">Total de habitante</th>
+          <td class="num"><strong>210 147 125</strong></td>
+        </tr>
+      </tfoot>
       <tbody>
         <tr>
           <td>São Paulo</td>
@@ -164,12 +178,7 @@
 
         
       </tbody>
-      <tfoot>
-        <tr>
-          <th>Total de habitante</th>
-          <td class="num"><strong>210 147 125</strong></td>
-        </tr>
-      </tfoot>
+      
     </table>
   </body>
 </html>
