--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -13,6 +13,7 @@
       table {
         width: 500px;
         border-collapse: collapse;
+        position: relative;
       }
 
       caption {
@@ -30,6 +31,20 @@
       thead, tfoot {
         background-color: gray;
         color: white;
+      }
+
+      thead > tr > th {
+        position: sticky;
+        top: -1px; 
+        background-color: gray;
+      }
+
+      tbody > tr:nth-child(odd) { /* odd é impar e pode ser usado como >> 2n-1 */
+        background-color: white;
+      }
+
+      tbody > tr:nth-child(even) { /* even é par e pode ser usado como >> 2n */
+        background-color: lightgray;
       }
 
       .num {
@@ -180,5 +195,11 @@
       </tbody>
       
     </table>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptas minus dolores id esse ea fugiat eligendi perferendis, at magni eaque, molestias dolorem amet maxime, quia molestiae porro. Ut, harum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, minus. Sint, quisquam quia. Repellendus omnis quas dicta iusto, provident architecto maiores, neque ipsam odit eveniet, vitae voluptatibus voluptates tempora voluptate! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quo dolores optio, incidunt blanditiis earum exercitationem similique, dolorem pariatur harum totam veritatis vero quae ratione! Quasi nihil eos iste alias! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi quod neque, eius officia, dolores reiciendis dicta, molestiae rerum voluptatum porro distinctio cumque nulla delectus modi asperiores tempore inventore consequuntur ullam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptas minus dolores id esse ea fugiat eligendi perferendis, at magni eaque, molestias dolorem amet maxime, quia molestiae porro. Ut, harum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, minus. Sint, quisquam quia. Repellendus omnis quas dicta iusto, provident architecto maiores, neque ipsam odit eveniet, vitae voluptatibus voluptates tempora voluptate! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quo dolores optio, incidunt blanditiis earum exercitationem similique, dolorem pariatur harum totam veritatis vero quae ratione! Quasi nihil eos iste alias! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi quod neque, eius officia, dolores reiciendis dicta, molestiae rerum voluptatum porro distinctio cumque nulla delectus modi asperiores tempore inventore consequuntur ullam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptas minus dolores id esse ea fugiat eligendi perferendis, at magni eaque, molestias dolorem amet maxime, quia molestiae porro. Ut, harum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, minus. Sint, quisquam quia. Repellendus omnis quas dicta iusto, provident architecto maiores, neque ipsam odit eveniet, vitae voluptatibus voluptates tempora voluptate! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quo dolores optio, incidunt blanditiis earum exercitationem similique, dolorem pariatur harum totam veritatis vero quae ratione! Quasi nihil eos iste alias! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi quod neque, eius officia, dolores reiciendis dicta, molestiae rerum voluptatum porro distinctio cumque nulla delectus modi asperiores tempore inventore consequuntur ullam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptas minus dolores id esse ea fugiat eligendi perferendis, at magni eaque, molestias dolorem amet maxime, quia molestiae porro. Ut, harum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, minus. Sint, quisquam quia. Repellendus omnis quas dicta iusto, provident architecto maiores, neque ipsam odit eveniet, vitae voluptatibus voluptates tempora voluptate! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quo dolores optio, incidunt blanditiis earum exercitationem similique, dolorem pariatur harum totam veritatis vero quae ratione! Quasi nihil eos iste alias! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi quod neque, eius officia, dolores reiciendis dicta, molestiae rerum voluptatum porro distinctio cumque nulla delectus modi asperiores tempore inventore consequuntur ullam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptas minus dolores id esse ea fugiat eligendi perferendis, at magni eaque, molestias dolorem amet maxime, quia molestiae porro. Ut, harum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, minus. Sint, quisquam quia. Repellendus omnis quas dicta iusto, provident architecto maiores, neque ipsam odit eveniet, vitae voluptatibus voluptates tempora voluptate! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quo dolores optio, incidunt blanditiis earum exercitationem similique, dolorem pariatur harum totam veritatis vero quae ratione! Quasi nihil eos iste alias! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi quod neque, eius officia, dolores reiciendis dicta, molestiae rerum voluptatum porro distinctio cumque nulla delectus modi asperiores tempore inventore consequuntur ullam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptas minus dolores id esse ea fugiat eligendi perferendis, at magni eaque, molestias dolorem amet maxime, quia molestiae porro. Ut, harum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, minus. Sint, quisquam quia. Repellendus omnis quas dicta iusto, provident architecto maiores, neque ipsam odit eveniet, vitae voluptatibus voluptates tempora voluptate! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quo dolores optio, incidunt blanditiis earum exercitationem similique, dolorem pariatur harum totam veritatis vero quae ratione! Quasi nihil eos iste alias! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi quod neque, eius officia, dolores reiciendis dicta, molestiae rerum voluptatum porro distinctio cumque nulla delectus modi asperiores tempore inventore consequuntur ullam!</p>
   </body>
 </html>
