--- a/exercicios/desafios/d013/d013-3.html
+++ b/exercicios/desafios/d013/d013-3.html
@@ -7,7 +7,7 @@
   <title>Desafio parte 2</title>
   <style>
     body {
-      font-size: 1.5em;
+      font-size: 1em;
       font-family: Arial, Helvetica, sans-serif;
     }
 
@@ -15,7 +15,7 @@
       border-collapse: collapse;
     }
 
-    td {
+    td, th {
       border: 1px solid black;
       text-align: center;
       padding: 10px 15px 10px;
@@ -25,18 +25,25 @@
       font-weight: bold;
     }
 
+    caption {
+      padding: 10px;
+      font-weight: bold;
+    }
+
   </style>
   </head>
     <body>
+      <h1>Exercício de Tabelas</h1>
       <table>
+        <caption>Filmes Favoritos</caption>
         <tbody>
           <tr class="strong">
-            <td>Grupo</td>
-            <td>Nomes</td>
-            <td colspan="3">Filmes</td>
+            <th>Grupo</th>
+            <th>Nomes</th>
+            <th colspan="3">Filmes</th>
           </tr>
           <tr>
-            <td rowspan="3" class="strong">Mulheres</td>
+            <th rowspan="3" class="strong">Mulheres</th>
             <td>Ana Maria</td>
             <td>Alien</td>
             <td>Rambo</td>
@@ -55,7 +62,7 @@
             <td>Big Hero</td>
           </tr>
           <tr>
-            <td rowspan="3" class="strong">Homens</td>
+            <th rowspan="3" class="strong">Homens</th>
             <td>Bruno mendonça</td>
             <td>Intocáveis</td>
             <td>Amnésia</td>
