--- a/exercicios/desafios/d013/d013-3.html
+++ b/exercicios/desafios/d013/d013-3.html
@@ -36,12 +36,14 @@
       <h1>Exercício de Tabelas</h1>
       <table>
         <caption>Filmes Favoritos</caption>
-        <tbody>
+        <thead>
           <tr class="strong">
-            <th>Grupo</th>
-            <th>Nomes</th>
-            <th colspan="3">Filmes</th>
-          </tr>
+          <th>Grupo</th>
+          <th>Nomes</th>
+          <th colspan="3">Filmes</th>
+        </tr>
+      </thead>
+        <tbody>
           <tr>
             <th rowspan="3" class="strong">Mulheres</th>
             <td>Ana Maria</td>
