--- a/exercicios/desafios/d013/d013-3.html
+++ b/exercicios/desafios/d013/d013-3.html
@@ -1,88 +1,96 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Desafio parte 2</title>
-  <style>
-    body {
-      font-size: 1em;
-      font-family: Arial, Helvetica, sans-serif;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Desafio parte 2</title>
+    <style>
+      body {
+        font-size: 1em;
+        font-family: Arial, Helvetica, sans-serif;
+      }
 
-    table {
-      border-collapse: collapse;
-    }
+      table {
+        border-collapse: collapse;
+      }
 
-    td, th {
-      border: 1px solid black;
-      text-align: center;
-      padding: 10px 15px 10px;
-    }
+      td,
+      th {
+        border: 1px solid black;
+        text-align: center;
+        padding: 10px 15px 10px;
+      }
 
-    .strong {
-      font-weight: bold;
-    }
+      .strong {
+        font-weight: bold;
+      }
 
-    caption {
-      padding: 10px;
-      font-weight: bold;
-    }
-
-  </style>
+      caption {
+        padding: 10px;
+        font-weight: bold;
+      }
+    </style>
   </head>
-    <body>
-      <h1>Exercício de Tabelas</h1>
-      <table>
-        <caption>Filmes Favoritos</caption>
-        <thead>
-          <tr class="strong">
-          <th>Grupo</th>
-          <th>Nomes</th>
-          <th colspan="3">Filmes</th>
+  <body>
+    <h1>Exercício de Tabelas</h1>
+    <table>
+      <caption>
+        Filmes Favoritos
+      </caption>
+      <thead>
+        <tr>
+          <th scope="col">Grupo</th>
+          <th scope="col">Nomes</th>
+          <th colspan="3" scope="colgroup">Filmes</th>
         </tr>
       </thead>
-        <tbody>
-          <tr>
-            <th rowspan="3" class="strong">Mulheres</th>
-            <td>Ana Maria</td>
-            <td>Alien</td>
-            <td>Rambo</td>
-            <td>Vingadores</td>
-          </tr>
-          <tr>
-            <td>Beatriz Souza</td>
-            <td>Hulk</td>
-            <td>Inception</td>
-            <td>Batman</td>
-          </tr>
-          <tr>
-            <td>Cláudia Melo</td>
-            <td>Oblivion</td>
-            <td>Matrix</td>
-            <td>Big Hero</td>
-          </tr>
-          <tr>
-            <th rowspan="3" class="strong">Homens</th>
-            <td>Bruno mendonça</td>
-            <td>Intocáveis</td>
-            <td>Amnésia</td>
-            <td>Gladiador</td>
-          </tr>
-          <tr>
-            <td>Daniel Lourenço</td>
-            <td>Wall-E</td>
-            <td>Oldboy</td>
-            <td>Dangal</td>
-          </tr>
-          <tr>
-            <td>Fabiano Mota</td>
-            <td>Star Wars 5</td>
-            <td>Taxi Driver</td>
-            <td>Toy Story</td>
-          </tr>
-        </tbody>
-      </table>
-    </body>
-  </html>
+      <tfoot>
+        <tr>
+          <th colspan="4" scope="row">Total</th>
+          <td>1000</td>
+        </tr>
+      </tfoot>
+      <tbody>
+        <tr>
+          <th rowspan="3" class="strong" scope="rowgroup">Mulheres</th>
+          <td>Ana Maria</td>
+          <td>Alien</td>
+          <td>Rambo</td>
+          <td>Vingadores</td>
+        </tr>
+        <tr>
+          <td>Beatriz Souza</td>
+          <td>Hulk</td>
+          <td>Inception</td>
+          <td>Batman</td>
+        </tr>
+        <tr>
+          <td>Cláudia Melo</td>
+          <td>Oblivion</td>
+          <td>Matrix</td>
+          <td>Big Hero</td>
+        </tr>
+        <tr>
+          <th rowspan="3" class="strong" scope="rowgroup">Homens</th>
+          <td>Bruno mendonça</td>
+          <td>Intocáveis</td>
+          <td>Amnésia</td>
+          <td>Gladiador</td>
+        </tr>
+        <tr>
+          <td>Daniel Lourenço</td>
+          <td>Wall-E</td>
+          <td>Oldboy</td>
+          <td>Dangal</td>
+        </tr>
+        <tr>
+          <td>Fabiano Mota</td>
+          <td>Star Wars 5</td>
+          <td>Taxi Driver</td>
+          <td>Toy Story</td>
+        </tr>
+      </tbody>
+    </table>
+  </body>
+</html>
