--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -21,7 +21,8 @@
   <h1>Teste com iframe</h1>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, dolore! Illo fugiat hic sit ea itaque voluptatibus atque alias vel debitis? Perferendis quibusdam quaerat ipsa vero ab saepe est ipsam!</p>
 
-<iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
+<iframe src="paginas-extras/pag001.html" frameborder="0" height="500" width="500"></iframe>
+<p>Infelizmente seu navegador não é compatível com isso!</p>
 
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas ratione vitae explicabo velit atque cumque officia quis? Nulla distinctio, asperiores, iste tempora, suscipit alias consequuntur atque a iusto pariatur illum!</p>
 </body>
