--- a/exercicios/ex026/mq004/index.html
+++ b/exercicios/ex026/mq004/index.html
@@ -8,7 +8,7 @@
 <body>
   <main>
     <h1>Testando Media Queries</h1>
-    <img src="" alt="">
+    <img src="icon-phone.png" alt="">
   </main>
   
 </body>
