--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projeto Media queries</title>
     <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
+      href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="estios/style.css" />
+    <link rel="stylesheet" href="estilos/media-query.css">
   </head>
-  <body>
+  <body onresize="mudouTamanho()">
     <header>
       <h1>Meu site</h1>
       <span id="burguer" class="material-icons" onclick="clickMenu()"
@@ -60,12 +59,21 @@
       </article>
     </main>
     <script>
-      function clickMenu() {
-        if (itens.style.display == 'block') {
-            itens.style.display = 'none'
-        } else {
+
+      function mudouTamanho() {
+        if (window.innerWidth >= 768) {
           itens.style.display = 'block'
-        }    
+        } else {
+          itens.style.display = 'none'
+        }
+      }
+
+      function clickMenu() {
+        if (itens.style.display == "block") {
+          itens.style.display = "none";
+        } else {
+          itens.style.display = "block";
+        }
       }
     </script>
   </body>
